src/main/java/com/example/loginserver/Errors/CompanyError.java
package com.example.loginserver.Errors;

public enum CompanyError {
    URL_ERROR,
    OPEN_CONNECTION_ERROR,
    ELSE_ERROR,
    READ_ERROR,
    GOOD,
    COMPANY_NOT_FOUND,
    COMPANY_EXIT,
    NOT_CHANGED,
    NOT_VALID_MAIL
}
